# FFmpegDemo

./: README.md
app/: CMakeLists.txt  CMakeListsCurl.txt  build.gradle
app/src/androidTest/java/com/jianjin33/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniUtils.cpp  JniUtils.h  jni-request.cpp  jniRequest.cpp  jni_ffmpeg.cpp  jni_ffmpeg2.cpp  native-lib.cpp
app/src/main/cpp/v2/: audio_render.cpp  audio_render.h  jni_ffmpeg2.cpp  jni_ffmpeg2_1.cpp
app/src/main/cpp/v3/: CreateBufferQueueAudioPlayer.cpp  OpenSLES.cpp  OpenSLES.h  jni_ffmpeg3.cpp  queue.cpp  queue.h
app/src/main/java/com/jianjin33/ffmpeg/: FFmpeg.java  MainActivity.java  Request.java  VideoView.java
app/src/main/java/com/jianjin33/ffmpeg/v3/: FFmpeg.java  FFmpeg3.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/jianjin33/ffmpeg/: ExampleUnitTest.java
doc/: FFmpeg编译.md  build-static.sh  build.sh  ffplay.c  help.md
doc/入门级资料/: compile-ffmpeg.sh  do-compile-ffmpeg.sh  do-detect-env.sh  软件推荐.txt
gradle/wrapper/: gradle-wrapper.properties
